--- a/css/estilo.css
+++ b/css/estilo.css
@@ -73,10 +73,7 @@ footer {
   footer .nostyle {
     text-decoration: none; }
 
-* {
-  padding: 0px;
-  margin: 0px;
-  box-sizing: border-box; }
+
 
 body {
   font-family: 'Montserrat', sans-serif;
@@ -93,7 +90,9 @@ body {
 
 .grid {
   display: grid;
-  grid-template-areas: "header header" "main main" "footer footer";
+  grid-template-areas: "header header"
+ "main main"
+ "footer footer";
   grid-template-columns: 1fr 2fr;
   grid-template-rows: auto auto 1fr; }
 
@@ -103,7 +102,9 @@ h1 {
 
 .gridProductos {
   display: grid;
-  grid-template-areas: "header header" "aside main" "footer footer";
+  grid-template-areas: "header header"
+ "aside main"
+ "footer footer";
   grid-template-columns: 1fr 2fr;
   grid-template-rows: auto auto 1fr; }
 
@@ -229,7 +230,9 @@ aside {
     font-size: medium; }
   .grid {
     display: grid;
-    grid-template-areas: "header" "main" "footer";
+    grid-template-areas: "header"
+ "main"
+ "footer";
     grid-template-columns: 1fr; }
   header {
     grid-template-columns: 1fr;
@@ -270,7 +273,10 @@ aside {
     width: 100vw; }
   .gridProductos {
     display: grid;
-    grid-template-areas: "header" "aside" "main" "footer";
+    grid-template-areas: "header"
+ "aside"
+ "main"
+ "footer";
     grid-template-columns: 1fr; }
   .productos {
     margin: 10px auto;
